# python-frontend

./: -  .env.example  .gitignore  .pre-commit-config.yaml  FRONTENDS.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  init.sql  mise.toml  pyproject.toml
.github/workflows/: ci.yml
backend/: database.py  requirements.txt
backend/app/: crud.py  main.py  models.py  schemas.py  websocket.py
backend/app/api/: api_v1.py
backend/app/core/: config.py
backend/app/middleware/: idempotency.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_auth.py  test_barber_service.py  test_customer_service.py  test_service_service.py
docs/: ANIMATION_PLAYGROUND.md  FASTUI_DEVELOPMENT_PATTERNS.md  FLET_DEVELOPMENT_PATTERNS.md  SOLARA_DEVELOPMENT_PATTERNS.md  STREAMLIT_DEVELOPMENT_PATTERNS.md  reflex-best-practices.md
frontend/fastui/: __init__.py  main.py  pytest.ini  requirements.txt
frontend/fastui/components/: __init__.py  forms.py  navigation.py  tables.py
frontend/fastui/services/: __init__.py  api_client.py
frontend/fastui/tests/: __init__.py
frontend/fastui/utils/: __init__.py
frontend/flet/: main.py  requirements.txt
frontend/flet/components/: focus_ring.py  hover_effect.py  loading_spinner.py  ripple_effect.py  shake_animation.py  toast_notification.py
frontend/flet/services/: api_client.py
frontend/flet/utils/: state_manager.py
frontend/kivy/: Dockerfile  main.py
frontend/kivy/components/: bento_grid.py  loading_animations.py  particle_system.py  shared_element_transition.py  swipe_gesture.py
frontend/kivy/screens/: manager.py
frontend/kivy/tests/: bento_grid_test.py  manager_test.py  particle_system_test.py  swipe_gesture_test.py
frontend/reflex/: main.py  rxconfig.py  state.py
frontend/reflex/barbershop_frontend/: barbershop_frontend.py
frontend/reflex/components/: __init__.py  animated_box.py  form.py  (+9 more)
frontend/shared/: __init__.py  auth_state.py  base_service.py  constants.py  error_handling.py  microinteractions.py  utils.py
frontend/solara/: __main__.py  auth_state.py  barber_state.py  customer_state.py  main.py  pytest.ini  requirements.txt  service_state.py  state.py
frontend/streamlit/: Dockerfile  main.py  requirements.txt
frontend/streamlit_updated/: main.py
memory/: MEMORY.md  unit_tests_summary.md
(+148 files in other folders)
