[project]
name = "barberpro"
version = "1.0.0"
description = "Modern barbershop management platform - Multi-frontend SaaS"
requires-python = ">=3.13"

[dependency-groups]
backend = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "redis>=4.6.0",
    "celery[redis]>=5.4.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

solara = [
    "solara>=0.10.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

flet = [
    "flet>=0.21.0",
    "httpx>=0.25.0",
]

streamlit = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.14.0",
    "altair>=5.0.0",
]

reflex = [
    "reflex>=0.4.0",
]

fastui = [
    "fastui>=0.1.0",
    "pydantic>=2.5.0",
]

kivy = [
    "kivy>=2.2.0",
    "kivymd>=1.1.1",
]

shared = [
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
]

dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "playwright>=1.40.0",
]